# Drone

./: README.md
ros2_env/docker/: Dockerfile  build.sh
ros2_env/mac_users/: start.sh
ros2_env/ros2_ws/install/: local_setup.sh  setup.sh
ros2_env/ros2_ws/install/minimal_robot_gazebo/share/ament_index/resource_index/parent_prefix_path/: minimal_robot_gazebo
ros2_env/ros2_ws/install/minimal_robot_gazebo/share/minimal_robot_gazebo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_env/ros2_ws/install/minimal_robot_gazebo/share/minimal_robot_gazebo/launch/: spawn_robot.launch.py
ros2_env/ros2_ws/install/minimal_robot_gazebo/share/minimal_robot_gazebo/urdf/: robot.urdf  robot.urdf.xacro
ros2_env/ros2_ws/install/minimal_robot_gazebo/share/minimal_robot_gazebo/urdf/urdf/: robot.urdf.xacro
ros2_env/ros2_ws/log/: latest_build
ros2_env/ros2_ws/src/minimal_robot_gazebo/: CMakeLists.txt
ros2_env/ros2_ws/src/minimal_robot_gazebo/launch/: spawn_robot.launch.py
ros2_env/ros2_ws/src/minimal_robot_gazebo/worlds/: my_world.world
ros2_env/start_env/: gui_initialize.sh  start.sh
